# code-test

bat/: cmd.bat
c/cpuid/: CPUID.md  CPUInfo.c  Makefile  README.md  md5lib.h
c/git_first_commit/: Makefile
c/gtk/: build.sh  main.c
c/jpeg_snapshot/: Makefile  main.c
c/qemu_edu/: qemu_edu.c
c/qemu_qom/: Makefile  README.md  base.c  makefile
c/send_kbd_mouse/: Makefile  main.c
c/skill_arts/: array_size.c  build_assert.c  container_of.c  cycle_array.c  minmax.c  remove_if.c  version.c
go/bindata/: README.md
go/context/: Readme.md  cancel.go  deadline.go  timeout.go  value.go
go/cross_build/: build.sh
go/etcdadmin/: Makefile  build
go/interface/: ftpstore.go  localstore.go  main.go  store.go
go/proxy/: tcp2unix-proxy.go
go/string_lock/: main.go
go/study/: go.mod  main.go  readme.md
go/type/: main.go
lex/: Makefile  pdflatex.tex  xelatex.tex
others/: special-char.txt
others/code-dictionary/: E001.md
others/vncserver/: readme.md  vncserver.service
python/DesignPatterns/: README.md
python/bcc/: vfs_create-watch.py  vfscount.py
python/carla/: 001_create_model3.py
rust/vncd/: Cargo.toml  build.rs
rust/vncd/src/: ioctl.rs  main.rs
rust/vncd/src/framebuffer/: fb.rs  mod.rs
rust/yew/qwer-learner/: Cargo.toml  index.html  index.scss
rust/yew/qwer-learner/src/: main.rs
rust/yew/qwer-learner/src/common/: msg.rs
rust/yew/qwer-learner/src/components/: body.rs  header.rs  input.rs  keyboard.rs  mod.rs
shell/: mirror_ovirt_rpm.sh  strings.sh  system_optimize.sh
systemtap/: helloworld.stp  notes  syscalllist.stp
(+517 files in other folders)
