[package]
name = "vncd"
version = "0.1.0"
authors = ["rayylee <rayylee@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[dependencies.vncserver]
path = "/home/libvnc-rs/vncserver"

[build-dependencies]
bindgen = "0.58"
