[package]
name = "qwer-learner"
version = "0.1.0"
authors = ["rayylee <rayylee@foxmail.com>"]
edition = "2018"

# https://crates.io
[dependencies]
yew = "0.17.4"
js-sys = "0.3.47"
wasm-bindgen = "0.2.70"
serde = { version = "1.0", features = ["derive"] }

[dependencies.web-sys]
version = "0.3.47"
features = [
    'HtmlAudioElement',
    'OfflineAudioContext',
    'AudioContext',
    'AudioBufferSourceNode',
    'AudioBuffer',
    'AudioDestinationNode',
    'BaseAudioContext',
]
